kubernetes/apps/argo-system/argo-cd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
  namespace: argocd
spec:
  parentRefs:
    - name: external
      namespace: kube-system
  hostnames: ["argo.aknuk.dev"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
